--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-z3-solver>=4.8
-qiskit>=1.2.4 <= 2.0
-dwave-ocean-sdk>=8.0.1 <= 9.0
+z3-solver>=4.8,<5.0,
+qiskit>=1.2.4,<=2.0,
+dwave-ocean-sdk>=8.0.1,<=9.0,
