--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+# if only using z3
 z3-solver==4.13.3
-qiskit[visualization]==1.2.4,
-dwave-ocean-sdk>=8.0.1,<=9.0,
 
+# if using D-Wave systems
+dwave-ocean-sdk==8.0.1
+
+# if using IBM systems
+qiskit==1.2.4
 qiskit-aer==0.15.1 #aer simulators moved to standalone package with qiskit 1.x
 qiskit-optimization==0.6.1 # now holds optimization algorithms
 qiskit-algorithms==0.3.1
