--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# if only using z3
+# if using z3
 z3-solver==4.13.3
 
 # if using D-Wave systems
@@ -6,6 +6,7 @@ dwave-ocean-sdk==8.0.1
 
 # if using IBM systems
 qiskit==1.2.4
-qiskit-aer==0.15.1 #aer simulators moved to standalone package with qiskit 1.x
-qiskit-optimization==0.6.1 # now holds optimization algorithms
+qiskit-aer==0.15.1
+qiskit-optimization==0.6.1
 qiskit-algorithms==0.3.1
+qiskit-ibm-runtime==0.33.2
